# MeanComments

./: .gitignore  CMakeLists.txt  README.md  notatki-AAL.txt  test1.sh
Algorithm/Cpp/: CMakeLists.txt
Algorithm/Cpp/include/: algorithm.h
Algorithm/Cpp/src/: CMakeLists.txt  algorithm.cpp
Docs/: 01-2020-part1.xls  output.csv  output.gnumeric
Docs/Polish/: AAL-Dokumentacja.tex  AAL-Koncepcja_Wstepna.aux  AAL-Koncepcja_Wstepna.tex  AAL-Koncepcja_Wstepna.toc  annotated.tex  classGenerator.tex  classSolver.tex  output.csv
Examples/: fair.prob  user2500_com10000.prob
Generator/Cpp/: CMakeLists.txt
Generator/Cpp/GeneratorAAL/: CMakeLists.txt  GeneratorAAL.cpp  GeneratorAAL.h
Generator/Cpp/src/: CMakeLists.txt
Generator/Python/Asset/: names
Sources/: CMakeLists.txt  main.cpp
Sources/Cpp/: CMakeLists.txt  configDef  main.cpp
Sources/Cpp/include/: Generator.h  Solver.h
Sources/Cpp/src/: CMakeLists.txt  Generator.cpp  GraphContainer.cpp  Solver.cpp  main.cpp
Sources/Cpp/test/: CMakeLists.txt  ContainerTest.cpp  SolverTest.cpp
Sources/Python/: Generator.py
Sources/include/: Generator.h  GraphContainer.h  Solver.h
Sources/src/: CMakeLists.txt  Generator.cpp
Sources/test/: CMakeLists.txt  ContainerTest.cpp  SolverTest.cpp  test_main.cpp
