# CMakeList.txt: projekt CMake dla elementu GeneratorAAL, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (GeneratorAAL "GeneratorAAL.cpp" "GeneratorAAL.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
